<resources>
    <string name="app_name">Rivers of Life</string>
    <string name="welcomeText"><b>Welcome to Rivers of Life Church Online!</b> We are excited that you have chosen to visit our website!
        Your visit to this website is not an accident, we believe it’s a divine appointment set up by God Himself.
        God wants you to know just how much He loves you, and what wonderful plans He has for you and your family.
        Our prayer is that the Word of God delivered from this ministry will reach, restore, and refresh your life.</string>
    <string name="for_more_information_and_directions_click_here">For more information \nand Directions click here</string>
    <string name="sunday_at_10am_wednesday_at_7pm"><b>SUNDAY</b> at 10am \n<b>WEDNESDAY</b> at 7pm</string>
    <string name="location_2495_cedar_st_ste_21_23c_holt_mi_48842"><b>Location</b> | 2495 Cedar St., Ste. 21-23C |\nHolt, MI 48842</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_arms">Open Arms is a ministry dedicated to helping men be the spiritual man God calls them to be.
        A godly man is a servant, and being a spiritual leader does not mean dominating your family. It means serving your family, and being a godly example to their family.
        Open Arms provides men with resources to develop godly character, and to equip them to influence their world for Christ.
        Open Arms offers a bi-weekly bible study/fellowship and other special events and activities throughout the year.\n\n<b>Men’s Fellowship meets the 2nd and 4th Mondays at 6:15pm in the Youth Room</b></string>
    <string name="heart2heart">Heart 2 Heart is bible study for women ages 18 and up. Our vision is to touch the heart of God so that we can touch the hearts of others. Often times women are so busy being Martha…taking care of everyone and everything else, that they never take the time to be Mary and just sit at the feet of Jesus to get refreshed.
        \n\nAt Heart 2 Heart, we want to provide times for women to sit at the feet of Jesus, and other times to just have some good old relaxing fun with other women of faith. Heart 2 Heart meets once a month for bible study and fellowship. In addition, we conduct quarterly “Breakfast and the Word” for women, as well as special classes, events, and activities as scheduled.
    \n\n<b>Meet every 3rd Monday at 6:30pm in Youth Room</b></string>
    <string name="van_trans">Bus transportation is available to anyone within 20 miles of the Church for both services 8:30am and 11:00am. Anyone needing a ride should call us at (517) 889-5453 no later than Thursday, and give us your name, phone, and address. The bus driver will contact you with your pick up time, for the service you choose. Children 12 &amp; under must be accompanied by an adult.</string>
    <string name="sowing_seeds">Sowing seeds is an outreach to assist the elderly, the handicapped, and the needy with yard clean-up. We mow, trim bushes and trees, edge lawns and do some planting and landscaping. These services are free of charge and we do not ask for donations; we simply want to be a blessing and show the love of Jesus. Visit us on <a href="https://www.facebook.com/Sowing-Seeds-Ministry-Rivers-of-Life-Church-406327142816085/">Facebook at Sowing Seeds Ministry- Rivers of Life Church</a></string>
    <string name="prison_ministry">Matthew 25:36 “…I was in prison, and ye came unto me.”\n\nThe prison ministry team goes to those who are incarcerated and brings hope to them through the preaching of God’s Word and in demonstrating God’s power and love. </string>
    <string name="kingdom_kids">Jesus said in Mark 10:14 “Let the children come to me…”
        Our goal in Kingdom Kids is to create an atmosphere of warmth, love and excitement for children that will guide them into a deeper relationship with God. Our teachers are well trained and equipped to instruct children at their respective age levels in a way that kids can relate.
        The children shall learn the Bible through the use of proven curriculum that will help them build a solid belief system so they can live a victorious life in Christ.\n<b>Nursery</b> – Baby Village: Ages 3 months to 3 years old\n
        <b>Toddlers</b> – Toddler Town: Ages 3 to 5 years old (should be potty trained)\n<b>Grade School</b> – Faith City: 1st through 6th grade.\n<b>Meets every Sunday at 8:30am amp 11am. Faith City meets on Wednesday nights at 7:00pm</b>\n
        (It is our policy to conduct background checks on all teachers and workers prior to any involvement in the children or youth ministries at Rivers of Life Church.)</string>
    <string name="legacy">I Timothy 4:12 says “Let no man despise thy youth, but be thou an example…”\n\n
        Our ministry is for 7th to 12th graders and meets every Sunday at 11:00am. Our goal is to guide our youth in the Word of God,
        helping them to grow and develop in their relationship with Jesus so that they will set the trend rather than follow the trends of today’s culture.\n\n
        Our team of teachers are trained and equipped to instruct youth in the Word of God and are here to help assist youth with the various challenges they face in today’s world. We also offer special events and activities for youth to get involved in.
        \n\n<b>Youth Ministry meets every Sunday at 11:00am</b></string>
    <string name="missions_outreach">The Mission Department is the love of God in action. Through events like the Great Turkey Giveaway, Winter Coat Drive and One Item Outreach, we are providing necessary items that most take for granted.
        We are blessed to be a blessing not only to the people here in our own community, but also in other nations, such as the Mayan Achi Indians in Pacux, Baja Verapaz, Guatemala.
        \n\nGod promised us in Prov. 28:27 He that giveth unto the poor shall not lack. We have the giving heart of God beating strong within us.</string>
    <string name="contact_us_info">We would love to keep you abreast of all that’s going on at the River. Whether you have a prayer request, praise report, or just looking to get information, we want to assist in any way possible. \n\n<b>Please fill out the form</b> below, with your request, and we’ll be sure to contact you as soon as possible! Thanks!</string>
    <string name="phone"><b>Phone number</b> | (517) 889-5453</string>
    <string name="sunday_10am_wednesday_7pm"><b>SUNDAY</b> |10am    <b>WEDNESDAY</b> | 7pm</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="january_2003"><b>January 2003</b>, 2108 Wood Street – Where it all began! Pastor Brigitte started a women’s bible study at this small duplex where she and Pastor Jesse lived, on Wood Street in Lansing. It quickly grew to 20+ women every Monday night. The women believed in the call on their lives so much that they insisted that offerings be taken up in support of us starting Rivers of Life Church. It was not long before we stepped out of the boat and started Rivers of Life. \n\nPastors Jesse and Brigitte were the worship leaders then; Pastor Brigitte could not really carry a tune, but her heart was pure, and Pastor Jesse could sing but could not remember the words to the songs. But thank God we grew fast enough to get some real singers up there!</string>
    <string name="october_2004"><b>October 2004</b> – Rivers of Life Church begins! Pastors Jesse and Brigitte began holding Sunday morning worship services on October 3, 2004. The conference room in the basement of this Century 21 Real Estate office was small, but it was just what we needed to start God’s work.</string>
    <string name="december_2005"><b>December 2005</b> – We began meeting at Sankofa Shule Academy towards the end of 2005. It served its purpose while we were there, but there was lots of work involved. Every Saturday morning we had to set up the entire gym and classrooms in preparation for Sunday’s service. We then had to tear everything down immediately after service – yes … even in our nice church clothes! After 2 years of faithful service, we were ready to leave this location.</string>
    <string name="june_2007"><b>June 2007</b> – We then began meeting at Waverly Middle School. Even though we did not have to set up on Saturdays, the sound and music department still had to arrive at 7:00 am each Sunday to set up and rehearse. It was still very tedious, but with each move the Lord blessed us more and more.</string>
    <string name="_2008"><b>2008</b> – God blessed us with a new facility and since then we have continued to grow and make a difference in our city with the healing power of God’s Word.</string>
    <string name="the_history">The History of Rivers of Life \nChurch</string>
    <string name="about_us">We are excited that you have chosen to visit our web site! Your visit to this site is not an accident, we believe it’s a divine appointment set up by God Himself. God wants you to know just how much He loves you, and what wonderful plans He has for you and your family. Our prayer is that the Word of God delivered from this ministry will reach, restore, and refresh your life. \n\nJesus said, Heaven and earth will pass away, but the Word of God would never pass away. Therefore it is vital that we are taught the Word of God in a practical manner so that we can walk in the success God has designed for us. \n\nAs pastors, we have committed ourselves to teaching God’s Word with simplicity, so that people can receive it, apply it, and experience manifestations of God’s power in their lives. We count it a privilege and an honor to minister the Word of God to you and pray for God’s revelation to flood your soul. We invite you to join us at Rivers of Life Church as we worship and fellowship in God’s Word every Sunday, and Wednesday. We endeavor to encourage, inspire, and challenge you to a greater walk with God. Your life will never be the same!</string>
    <string name="we_believe">Before God ever instituted the church, He instituted the family. A church is only as strong as its families. Therefore, we believe that without strong families there can be no strong church. \n\nOur goal is to reach, restore and refresh families with the power of God’s love.</string>
    <string name="our_mission">Rivers of Life church exists to help people fulfill their Godgiven destiny. We do this by: \n\n<b>Reaching</b> people with the good news of Jesus Christ (Outreach) Matt. 12:15 \n\n<b>Restoring</b> them through the Word of God (Discipleship) Matt. 28:19-20 \n\n<b>Refreshing</b> them with the love of God (Worship) Acts 3:19</string>
    <string name="governing_values">Excellence \n\nIntegrity \n\nPositive atmosphere \n\nEffective leadership \n\nInspiring preaching \n\nPractical teaching \n\nGrowth \n\nLove \n\nPrayer \n\nMaking disciples</string>
    <string name="quote">\"Reaching, Restoring, \nand Refreshing lives by \nthe power of God\'s love.\"</string>
</resources>