<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.android.riversoflife.OurHistory">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/the_history"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/january_2003"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/october_2004"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/december_2005"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/june_2007"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_2008"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_margin="16dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/our_history"
                android:id="@+id/imageView2"
                android:scaleType="fitXY"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
