<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.android.riversoflife.AboutUs">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="We Believe in Family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/we_believe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="Our Vision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="To help people fulfill their God-given destiny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="Our Mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/our_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="Governing Values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:text="@string/governing_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:text="@string/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>


    </LinearLayout>



</ScrollView>


</FrameLayout>
