<android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.android.riversoflife.WelcomeFragment"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- TODO: Update blank fragment layout -->
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@android:color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="false"
                android:background="@drawable/sliderbackground"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/welcome_image_view_slider"
                    android:scaleType="fitXY"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:adjustViewBounds="false"
                    android:elevation="20dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Welcome"
                android:ems="10"
                android:id="@+id/WelcomeText"
                tools:text="Welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal|bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TableRow
                android:id="@+id/hr"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/WelcomeText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/welcomeText"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/WelcomeText2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="We invite you to join us at Rivers of Life Church as we worship and fellowship in God’s Word every Sunday, and Wednesday. Your life will never be the same!"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="– Pastors Jesse and Brigitte Brown"
                android:ems="10"
                android:id="@+id/WelcomeText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="textEnd"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pastorslite"
                    android:layout_gravity="center"
                    android:id="@+id/imageView"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/lightstock_17777_small_matthew_2"
                    android:scaleType="fitXY"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignTop="@+id/info_layout"
                    android:layout_alignBottom="@id/info_layout"
                    android:layout_alignLeft="@id/info_layout"
                    android:layout_alignRight="@id/info_layout"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/info_layout">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Everyone Is Welcome"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sunday_at_10am_wednesday_at_7pm"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location_2495_cedar_st_ste_21_23c_holt_mi_48842"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Phone number | (517) 889-5453"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/for_more_information_and_directions_click_here"
                        android:textColor="@android:color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        />
                </LinearLayout>
            </RelativeLayout>
            <!-- TODO: make click here go to contact us page  -->
        </LinearLayout>
    <!--</ScrollView>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="Welcome Fragment"-->
        <!--android:gravity="center"-->
        <!--android:textSize="35dp"-->
        <!--android:textStyle="bold"/>-->

</android.support.v4.widget.NestedScrollView>
